# boop

./: Cargo.toml  README.md
catalog/: Cargo.toml  database.db
catalog/src/: lib.rs  main.rs
catalog/src/client/: artist.rs  mod.rs  release.rs
catalog/src/model/: artist.rs  mod.rs  release.rs  track.rs
catalog/src/repository/: artist.rs  mod.rs  release.rs
catalog/src/service/: artist.rs  mod.rs  release.rs
catalog/tests/: integration_test.rs
model/src/: artist.rs  lib.rs  release.rs  track.rs
player/: Cargo.toml  README.md
player/src/: application.rs  library.rs  main.rs  now_playing.rs
src/: main.rs
src/audio/: mod.rs
src/battery/: mod.rs
src/frontend/: application.rs  battery.rs  controls.rs  library.rs  menu.rs  mod.rs  now_playing.rs  player.rs
src/frontend/player/: mod.rs
src/model/: artist.rs  mod.rs  release.rs  track.rs
src/repository/: artist.rs  mod.rs  release.rs  track.rs
src/service/: artist.rs  mod.rs  release.rs  track.rs
