[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
cpal = "0.17.1"
iced = { version = "0.14.0", features = ["tokio", "image", "advanced"] }
symphonia = "0.5.5"
iced_futures = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.18"
serde = "1.0.228"
async-trait = "0.1.89"
anyhow = "1.0.101"
tokio = { version = "1.49.0", features = ["full"] }
uuidv4 = "1.0.0"
rodio = "0.21.1"
