[package]
name = "catalog"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
zbus = { version = "5.13.2", features = ["tokio"] }
zvariant = "5.9.2"
